--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="Exit">Home</string>
     <string name="GotIt">Got it!</string>
     <string name="OK_text">OK</string>
+
+    <string name="Error_title">Ups!</string>
+    <string name="Error_missing1">Du mangler at svare på et spørgsmål</string>
+    <string name="Error_missing2">Du mangler at svare på to spørgsmål</string>
+    <string name="Error_missing3">Du mangler at svare på tre spørgsmål</string>
+    <string name="Error_missingAll">Du har ikke svaret på nogle af spørgsmålene</string>
     
     <string name="Slide_title">Boobies</string>
     <string name="Slide_desc">Boobies er life! Muhaha</string>
@@ -43,7 +49,6 @@
         </big>
         ]]>
     </string>
-
 
   <string-array name="contact_subjects">
         <item>Uvildig Rådgivning</item>
