--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,16 @@
     <string name="Error_missingAll">Du har ikke svaret på nogle af spørgsmålene</string>
     <string name="Error_common">Noget gik galt! Prøv igen senere</string>
 
-    <string name="Slide_title">Boobies</string>
-    <string name="Slide_desc">Boobies er life! Muhaha</string>
+    <string name="Slide_title1">Kom godt i gang!</string>
+    <string name="Slide_desc1">Dette er en investerings guide
+        \nsom stiller simple spørgsmål til at
+        \nvurdere din investeringsprofil
+        \n\nTesten tager ca. 2 min.</string>
+    <string name="Slide_title2">Kontakt os</string>
+    <string name="Slide_desc2">Når har svaret på spørgsmålene
+        \nkan du kontakte os for den bedst
+        \nmulige konsultation!
+    \n\nTryk næste for at starte!</string>
 
     <string name="Question1">Hvor stor betydning tror du din pensionsopsparing bliver for din samlede økonomi, når du går på pension?</string>
     <string name="Answer1_1">Ingen</string>
@@ -49,6 +57,11 @@
     <string name="Answer4_2">Lidt</string>
     <string name="Answer4_3">Noget</string>
     <string name="Answer4_4">Godt</string>
+
+    <string name="InvestmentProfile_low">Meget lav investeringsprofil</string>
+    <string name="InvestmentProfile_medium">Forsigtig investeringsprofil</string>
+    <string name="InvestmentProfile_average">Gennemsnitlig investeringsprofil</string>
+    <string name="InvestmentProfile_high">Risiko betonet investeringsprofil</string>
 
     <string name="Contact_txt">
         <![CDATA[
