--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="Loaded">Loaded</string>
     <string name="Ops">Ups!</string>
 
+    <string name="Notifications">Notifikationer</string>
+
     <string name="Error_title">Ups!</string>
     <string name="Error_missing1">Du mangler at svare på et spørgsmål</string>
     <string name="Error_missing2">Du mangler at svare på to spørgsmål</string>
@@ -93,7 +95,6 @@
     <string name="InvalidMailTxt">Den mail du har indtastet er ugyldig.\n
         Tjek venligst at den er indtastet korrekt.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="infotxt">
