--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="Answer2_2">Middel</string>
     <string name="Answer2_3">Lille</string>
 
-    <string name="Question3">Kan du leve med, at du på et år kan miste f.eks. 20% af hele din opsparing, hvis aktierne falder drastisk?</string>
+    <string name="Question3">Kan du leve med, at du på et år kan miste f.eks. 20 procent af hele din opsparing, hvis aktierne falder drastisk?</string>
     <string name="Answer3_1">Nej</string>
     <string name="Answer3_2">Ja</string>
 
